k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app-httproute
  namespace: demo-app
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: demo-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-app
          port: 80
